# ai-agents-interoperability

./: Dockerfile  README.md  env.example  mcp_server.py  pyproject.toml
src/: bee_agent.py  langgraph_agent.py  langgraph_agent_remote_mcp.py  openai_agent.py
src/acp/acp-client-serverless/: invoke-agent.py  list-agents.py
src/acp/acp-server/: Dockerfile  main.py
src/acp/acp-server/src/: flight_search_agent.py  itinerary_planner_agent.py
src/acp/acp-server/src/agents/: __init__.py  flight_search_agent.py  itinerary_planner_agent.py
src/fastapi/: fastapi_mcp_server.py
src/fastapi-mcp/: README.md  main.py  pyproject.toml
src/fastapi-mcp/src/: db_crud.py  token_generator.py
src/fastmcp/: README.md  main.py
src/fastmcp/database/: customer_database.db
src/fastmcp/src/: db_crud.py
src/mcp-prod-server/: Dockerfile  README.md  mcp_server.py  pyproject.toml
src/mcp-prod-server/config/: app_config.py
src/mcp-prod-server/src/: create_connection.py  db_list_tables.py  db_query.py  db_query_checker.py  get_table_schema.py  set_current_schema.py
src/mcp/mcp-client/: langgraph_agent.py  langgraph_agent_remote_mcp.py  openai_agent.py
src/mcp/mcp-server/: mcp_server.py
src/mcp/mcp-server/tools/: __init__.py  flight_search_tool.py  weather_tool.py
src/notebooks/: Agent protocol - LangChain.ipynb  Parallel exec of agents.ipynb
src/notebooks/db/: portfolio.db
src/openai-oss/: README.md  agent.py  pyproject.toml
tools/: __init__.py  flight_search_tool.py  search_tool.py
