[project]
name = "ai-agent-interoperability-demo"
version = "1.0.0"
description = "Demo model context protocol, agent communication protocol and interoperability."
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "acp-sdk>=0.7.3",
    "autogen-agentchat>=0.5.7",
    "autogen-ext[mcp,openai]>=0.5.7",
    "beeai-framework>=0.1.8",
    "crewai>=0.134.0",
    "fastapi-mcp>=0.4.0",
    "fastmcp>=0.4.1",
    "google-search-results>=2.4.2",
    "ibm-watsonx-ai>=1.3.0",
    "ipykernel>=6.30.0",
    "jupyter>=1.1.1",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.45",
    "langchain-ibm>=0.3.8",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.16",
    "mcp>=1.12.3",
    "openai-agents>=0.0.7",
    "pydantic>=2.10.6",
    "requests>=2.32.2",
    "sqlalchemy>=2.0.39",
    "tabulate>=0.9.0",
    "tavily-python>=0.5.1",
]

[tool.uv.workspace]
members = [
    "src/mcp-prod-server",
]
